update all files

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,18 @@
+<div ng-controller="HomeController" id="slides_control">
 <div>
     <h2>{{title}}</h2>
 </div>
+    <div>
+      <carousel interval="myInterval">
+        <slide ng-repeat="slide in slides" active="slide.active">
+          <img ng-src="{{slide.image}}">
+          <div class="carousel-caption">
+            <h4>Slide{{$index+1}}</h4>
+          </div>
+        </slide>
+      </carousel>
+    </div>
+</div>
+ 
+  
 
