--- a/templates/home.html
+++ b/templates/home.html
@@ -4,13 +4,28 @@
 </div>
     <div>
       <carousel interval="myInterval">
-        <slide ng-repeat="slide in slides" active="slide.active">
-          <img ng-src="{{slide.image}}">
+        <slide data-ng-repeat="slide in slides" active="slide.active">
+          <img data-ng-src="{{slide.image}}" styl="margin:auto;">
           <div class="carousel-caption">
-            <h4>Slide{{$index+1}}</h4>
+            <h4>{{slide.Title}}</h4>
+            <p>{{slide.Summary}}</p>
           </div>
         </slide>
       </carousel>
+      <div class="row fliud">
+        <div class="span 6">
+          <ul>
+            <li data-ng-repeat="slide in slides">
+              <button class="btn btn-mini" data-ng-class="{'btn-info': !slide.active, 'btn-success': slide.active}" data-ng-disabled="slide.active" data-ng-click="slide.active = true">select</button>
+              {{slide.Title}}
+            </li>
+          </ul>          
+        </div>
+        <div class="span6">
+          Interval,in milliseconds:<input type="number" data-ng-model="myInternal"> <br />
+          enter negative number to stop the interval.
+        </div>
+      </div>
     </div>
 </div>
  
