--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
-/*body{  
-    padding-top: 30px;
-}
+body {
+            padding-top: 70px;
+        }
+
 nav{
   width:100%;
   background-color: #000000;  
@@ -30,4 +31,16 @@ ul.topnav li a {
     background-color: #000000;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-}*/
+}
+#slide{
+    width:200px;
+    height:200px;
+    overflow:hidden;
+    position:relative;
+}
+
+#about-image{
+  border-style: solid;
+  border-color: black;
+  border-width:2px;
+}
