--- a/templates/about.html
+++ b/templates/about.html
@@ -1,20 +1,20 @@
-<h1>Band Members</h1>
-  <div class="container" ng-app="BandApp" ng-controller="AboutController">
-    <div>
-      <ul>
-        <li ng-repeat="member in members">{{member.images}}
-          <img ng-id="member.name" ng-src="member.img" alt="member.name" class="pull-left">
-          <h4>{{member.name}}</h4>
-          <div class="paragraph">
-            <p>Lorem ipsum...</p>
-          </div>          
-        </li>          
-      </ul>
+<div class="container" ng-controller="AboutController">
+  <div>
+    <h3>{{title}}</h3>
+  </div>
+    <div class="row">
+      <div class="col-sm-8 col-sm-offset-2"
+    <ul>
+      <li ng-repeat="member in members">{{members.img}}
+        <img ng-src="members.img" alt="member.name" class="img-thumnail img-responsive" id="about-image" id="about">
+        <h4>{{member.name}}</h4>
         <div class="paragraph">
           <p>Lorem ipsum...</p>
-        </div>
-    </div>
-  </div>
+        </div>          
+      </li>          
+    </ul>
+</div>
+  
 
 <div>
   <h3> Subsribe for updates</h3>     
@@ -29,7 +29,7 @@
       <div class="form-group" ng-class="{ 'has-error' : form.username.$invalid }">
         <label for="username" class="col-sm-2 control-label">Username</label>
         <div class="col-sm-6">
-          <input type="text" name="username" id="username" class="form-control" ng-model="obj.username"
+          <input type="text" name="username" id="username" class="form-control" ng-model="subscribe.username"
                  ng-minlength="3" ng-maxlength="6">
           <p ng-show="form.username.$invalid" class="help-block">Username must be between 3 and 8 characters</p>
         </div>
@@ -37,7 +37,7 @@
       <div class="form-group" ng-class="{ 'has-error' : form.email.$invalid }">
         <label for="email" class="col-sm-2 control-label">Email</label>
         <div class="col-sm-6">
-          <input type="email" name="email" id="email" class="form-control" ng-model="obj.email">
+          <input type="email" name="email" id="email" class="form-control" ng-model="subscribe.email">
           <p ng-show="form.email.$invalid" class="help-block">Email is not valid</p>
         </div>
       </div>
