--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" ng-controller="ContactController">
   
     <h3>Contact Us</h3>  
       <div>
@@ -9,25 +9,35 @@
       </div>
       <div>
         Telephone:{{Contact.telephone}}
-      </div>
-      
-  </div>
+      </div>      
+</div>
   <div class="form-area">
-    <div class="form-group">
-      <input name="name" ng-model="name" id="FullName" type="text" ng-required="true" ng-pattern="name" autocomplete="off" placeholder="Full name" class="form-control">            
-        <span class="red-text" ng-if="inquiryForm.name.$error.required && inquiryForm.name.$dirty">Full name is a required field</span>
-        <span class="red-text" ng-show="inquiryForm.contact.$error.pattern">Please enter First Name and Last Name</span>      
+    <div class="row">
+      <div class="col-sm-6">
+        <div class="form-group">
+          <input name="name" ng-model="contact.name" id="FullName" type="text" ng-required="true" ng-pattern="name" autocomplete="off" placeholder="Full name" class="form-control">            
+          <span class="red-text" ng-if="inquiryForm.name.$error.required && inquiryForm.name.$dirty">Full name is a required field</span>
+          <span class="red-text" ng-show="inquiryForm.contact.$error.pattern">Please enter First Name and Last Name</span>      
       </div>
-
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-6">
       <div class="form-group">
-        <input name="email" ng-model="email" id="email" type="text" ng-pattern="eml_add" ng-required="true" autocomplete="off" placeholder="Email" class="form-control" >            
-          <span class="red-text" ng-if="inquiryForm.email.$error.required && inquiryForm.email.$dirty">Email address is a required</span> 
-          <span class="red-text" ng-show="inquiryForm.email.$error.pattern">Invalid Email</span>
+        <input name="email" ng-model="contact.email" id="email" type="text" ng-pattern="eml_add" ng-required="true" autocomplete="off" placeholder="Email" class="form-control" >            
+        <span class="red-text" ng-if="inquiryForm.email.$error.required && inquiryForm.email.$dirty">Email address is a required</span> 
+        <span class="red-text" ng-show="inquiryForm.email.$error.pattern">Invalid Email</span>
+      </div>
     </div>
-    <div class="form-group">
-        <textarea name="massage" ng-model="message" id="email" type="text" ng-required="true" autocomplete="off" placeholder="message"></textarea>
+  </div>
+  <div class="row">
+    <div class="col-sm-6">
+      <div class="form-group">
+        <textarea name="massage" ng-model="contac.message" id="email" type="text" ng-required="true" autocomplete="off" placeholder="message"></textarea>
+      </div>
     </div>
-      <div>                     
-        <button type="button" id="submit" name="submit" class="btn btn-primary pull-right" ng-disabled="inquiryForm.$invalid">Submit Form</button>    
-    </div>   
+  </div>
+  <div class="form-group">                     
+    <button type="button" id="submit" name="submit" class="btn btn-primary pull-right" ng-disabled="inquiryForm.$invalid">Submit Form</button>    
+  </div>   
 </div>  
