--- a/templates/home.html
+++ b/templates/home.html
@@ -2,16 +2,18 @@
 <div>
     <h2>{{title}}</h2>
 </div>
-    <div>
+  <div class="row">
+    <div class="col-md-8 col-md-offset-2">
       <carousel interval="myInterval">
-        <slide ng-repeat="slide in slides" active="slide.active">
-          <img ng-src="{{slide.image}}">
-          <div class="carousel-caption">
-            <h4>Slide{{$index+1}}</h4>
-          </div>
-        </slide>
-      </carousel>
-    </div>
+        <slide id="slide" ng-repeat="slide in slides" active="slide.active">
+        <img ng-src="{{slide.image}}">
+        <div class="carousel-caption">
+          <h4>Slide{{$index+1}}</h4>
+        </div>
+      </slide>
+    </carousel>
+  </div>
+</div>
 </div>
  
   
