--- a/templates/music.html
+++ b/templates/music.html
@@ -1,3 +1,36 @@
+<div class="form-group">
+  <label>volume: <input min="0" max="1" step="0.01" type="range" ng-model="audio.volume" /></label>
+</div>
+
+<div class="form-group">
+  <button ng-disabled="currentNum == 0" class="btn btn-default prev" ng-click="prev()"><i class="glyphicon glyphicon-step-backward"></i> prev</button>
+  <button class="btn btn-default playpause" ng-click="playpause()" ng-class="{paused:audio.paused}">
+    <span class="play-text"><i class="glyphicon glyphicon-play"></i> play</span>
+    <span class="pause-text"><i class="glyphicon glyphicon-pause"></i> pause</span>
+  </button>
+  <button ng-disabled="currentNum >= (totalNum-1)" class="btn btn-default next" ng-click="next()">next <i class="glyphicon glyphicon-step-forward"></i></button>
+</div>
+
+<div class="form-group time">
+  <label>time: <input min="0" max="{{audio.duration}}" step="0.01" type="range" ng-model="audio.currentTime" /></label>
+</div>
+
+<div class="form-group now-playing">
+  <p>Now Playing: <img width="30" height="30" src="{{info.image}}" /></p>
+  <p>{{info.artist.name}} - {{info.title}}</p>
+</div>
+
+
+
+
+<!--<div ng-controller="MusicController">
+  <audio media-player="audio1" data-playlist="playlist1">
+    <source src="http://upload.wikimedia.org/wikipedia/en/d/d0/Rick_Astley_-_Never_Gonna_Give_You_Up.ogg" type="audio/ogg">
+  </audio>
+  <span ng-show="audio1.playing">Player status: Playing</span>
+  <span ng-show="!audio1.playing">Player status: Paused</span>
+</div>
+
   <div ng-controller="MusicController">  
   <h3>Music List</h3>
   <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
@@ -12,4 +45,4 @@ Your browser does not support the audio element.
   <source src="horse.ogg" type="audio/ogg">
   <source src="horse.mp3" type="audio/mpeg">
 </audio>
-</div>
+</div>-->
