--- a/templates/home.html
+++ b/templates/home.html
@@ -6,9 +6,9 @@
     <div class="col-md-8 col-md-offset-2">
       <carousel interval="myInterval">
         <slide id="slide" ng-repeat="slide in slides" active="slide.active">
-        <img ng-src="{{slide.image}}">        
-      </slide>
-    </carousel>
+        <img ng-src={{slide.image}}>        
+      	</slide>
+	 </carousel>
   </div>
 </div>
 </div>
