--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,7 +1,7 @@
 <div class="container" ng-controller="ContactController">
   
     <h3>Contact Us</h3>  
-      <div>
+      <div ng-binding>
         Address:{{Contact.address}}
       </div>
       <div>
