making changes to controller

--- a/templates/about.html
+++ b/templates/about.html
@@ -5,7 +5,9 @@
           <li ng-repeat="member in members">
             <img ng-src="member.image" alt="member.name" class="img-thumnail img-responsive" id="about-image">
             <h5>{{member.name}}</h5>
+            <div>
               {{member.img}}
+            </div>
             <div class="paragraph">
               <p>Lorem ipsum...</p>
             </div>          
