--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,15 +1,15 @@
-<div class="container" ng-controller="ContactController">
-  
-    <h3>Contact Us</h3>  
-      <div ng-binding>
-        Address:{{Contact.address}}
-      </div>
-      <div>
-        Email:{{Contact.email}}
-      </div>
-      <div>
-        Telephone:{{Contact.telephone}}
-      </div>      
+<div ng-controller="ContactController">
+  <h3>Contact Us</h3>  
+    <div ng-bind>
+      Address:{{Contact.address}}
+    </div>
+    <div ng-bind>
+      Email:{{Contact.email}}
+    </div>
+    <div ng-bind=>
+      Telephone:{{Contact.telephone}}
+    </div>
+      
 </div>
   <div class="form-area">
     <div class="row">
