--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,5 @@
 <div ng-controller="HomeController" id="slides_control">
-	<div>
+	<div ng-model="title">
     	<h2 class="title">{{title}}</h2>
 	</div>
   <div class="row">
