--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,4 @@
-<div ng-controller="HomeController" id="slides_control">
+<div ng-controller="HomeController">
 	<div ng-model="title">
     	<h2 class="title">{{title}}</h2>
 	</div>
