--- a/templates/music.html
+++ b/templates/music.html
@@ -1,5 +1,27 @@
+<div ng-controller='MusicController'>
+ <button ng-click='audio.paused ? audio.play() : audio.pause()'>Pause</button>
+ <button ng-click='audio.restart()'>Stop</button>
+ <button ng-click='audio.muting = !audio.muting'>Mute</button>
+
+ <label>Current Time</label>
+ <input class='form-control' type=text ng-model='audio.currentTime'>
+ <label>Volume</label>
+ <input class='form-control' type=range min=0 max=1 step=0.01 ng-model='audio.volume'>
+ </div>
+	<div>
+		<audio src="" control id="audioplayer"></audio>
+			<ul id="playlist">
+				<li></li>
+				<li></li>
+				<li></li>
+			</ul>
+	</div>
+
+
+
+
 <div class="form-group">
-  <label>volume: <input min="0" max="1" step="0.01" type="range" ng-model="audio.volume" /></label>
+  <label>volume: <input min="0" max="1" step="0.01" type="range" ng-model="audio.volume"></label>
 </div>
 
 <div class="form-group">
@@ -23,26 +45,3 @@
 
 
 
-<!--<div ng-controller="MusicController">
-  <audio media-player="audio1" data-playlist="playlist1">
-    <source src="http://upload.wikimedia.org/wikipedia/en/d/d0/Rick_Astley_-_Never_Gonna_Give_You_Up.ogg" type="audio/ogg">
-  </audio>
-  <span ng-show="audio1.playing">Player status: Playing</span>
-  <span ng-show="!audio1.playing">Player status: Paused</span>
-</div>
-
-  <div ng-controller="MusicController">  
-  <h3>Music List</h3>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-
-<audio controls>
-  <source src="horse.ogg" type="audio/ogg">
-  <source src="horse.mp3" type="audio/mpeg">
-Your browser does not support the audio element.
-</audio>
-
-<audio controls>
-  <source src="horse.ogg" type="audio/ogg">
-  <source src="horse.mp3" type="audio/mpeg">
-</audio>
-</div>-->
