--- a/templates/photo.html
+++ b/templates/photo.html
@@ -1,2 +1,7 @@
 <div ng-controller=" PhotoController">
-  <h3>Photo gallery</h3>
+	<div class="row">
+		<div class="col-lg-12">
+			<h3>Swing Crew Photo Gallery</h3>
+		</div>
+	</div>
+</div>
