--- a/templates/photo.html
+++ b/templates/photo.html
@@ -3,5 +3,8 @@
 		<div class="col-lg-12">
 			<h3>Swing Crew Photo Gallery</h3>
 		</div>
+		<div class="col-lg-3 col-md-4 col-sm-6">
+			
+		</div>
 	</div>
 </div>
