--- a/templates/booking.html
+++ b/templates/booking.html
@@ -1,5 +1,5 @@
 <div ng-controller="BookingController">
-  <h2>{{BookingTitle}}</h2>
+  <h2 ng-model="bookingTitle">{{BookingTitle}}</h2>
 </div><br />
 
 <div class="booking-form container">
