--- a/templates/home.html
+++ b/templates/home.html
@@ -1,24 +1,28 @@
-<div ng-controller="HomeController">
+<div ng-app="bandApp">
+<div ng-controller="HomeController" id="slides_control">
 	<div ng-model="title">
     <h2 class="title">{{title}}</h2>
 	</div>
+  <div>
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
-      <carousel interval="myInterval">
-        <div id="slide" ng-repeat="slide in slides" active="slide.active">
-        <img ng-src={{slide.image}} alt="{{slide.caption}}">
-        </div>
-	    </carousel>
-  	</div>
-	</div>
+      <uib-carousel interval="myInterval">
+        <uib-slide ng-repeat="slide in slides track by slide.id" active="slide.active" index="slide.id">
+        <img ng-src="{{slide.image}}" alt="{{slide.caption}}">
+        </uib-slide>
+      </uib-carousel>
+    </div>
+  </div>  
+    <div>
+      <a class="left carousel-control" href="image-carousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="image-carousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div> 
+  </div>
+</div>
 </div> 
-  <!--<a class="left carousel-control" href="image-carousel" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="image-carousel" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div> 
-
