--- a/templates/home.html
+++ b/templates/home.html
@@ -1,28 +1,27 @@
 <div ng-app="bandApp">
 <div ng-controller="HomeController" id="slides_control">
-	<div ng-model="title">
-    <h2 class="title">{{title}}</h2>
-	</div>
-  <div>
-  <div class="row">
-    <div class="col-md-8 col-md-offset-2">
-      <uib-carousel interval="myInterval">
-        <uib-slide ng-repeat="slide in slides track by slide.id" active="slide.active" index="slide.id">
-        <img ng-src="{{slide.image}}" alt="{{slide.caption}}">
-        </uib-slide>
-      </uib-carousel>
-    </div>
-  </div>  
-    <div>
-      <a class="left carousel-control" href="image-carousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="image-carousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div> 
-  </div>
+<div>
+  <uib-carousel interval="setInterval">
+    <uib-slide ng-repeat="slide in slides track by slide.id" active="slide.active:0" index="slide.id">
+      <img class="carousel-images" ng-src="{{slide.image}}" alt="{{slide.id}}">
+        <div class="carousel-caption">
+          <h5>Assorted Band Events</h5>
+        </div>
+    </uib-slide>
+  </uib-carousel>
 </div>
+</div>      
+</div>
+
+    <!--controls--> 
+<div>
+  <a class="left carousel-control" href="image-carousel" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="image-carousel" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
 </div> 
+
