--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,13 +1,13 @@
 <div ng-controller="ContactController">
   <h3>Contact Us</h3>  
-    <div ng-bind>
-      Address:{{Contact.address}}
+    <div ng-model>
+      Address:{{contact.address}}
     </div>
-    <div ng-bind>
-      Email:{{Contact.email}}
+    <div ng-model>
+      Email:{{contact.email}}
     </div>
-    <div ng-bind=>
-      Telephone:{{Contact.telephone}}
+    <div ng-model>
+      Telephone:{{contact.telephone}}
     </div>
       
 </div>
