--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
-            padding-top: 70px;
-        }
+      padding-top: 70px;
+      background: url(http://localhost/home/images/back.jpg) no-repeat fixed center top;
+}
 
 nav{
   width:100%;
@@ -32,15 +33,6 @@ ul.topnav li a {
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
-slide {
-    width:200px;
-    height:200px;
-    overflow:hidden;
-    position:relative;
-}
-#slides_control > div{
-  height: 200px;
-}
 img{
   margin:auto;
   width: 400px;
@@ -52,13 +44,6 @@ img{
   top:30px;
  margin-left:-200px;
 }
-
-#about-image{
-  border-style: solid;
-  border-color: black;
-  border-width:2px;
-}
-
 audio-player .paused .play-text,
 audio-player .pause-text {
   display:inline-block;
@@ -67,11 +52,11 @@ audio-player .play-text,
 audio-player .paused .pause-text {
   display:none;
 }
-audio-player * {
+/*audio-player * {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-}
+}*/
