--- a/templates/home.html
+++ b/templates/home.html
@@ -1,27 +1,14 @@
-<div ng-app="bandApp">
+
 <div ng-controller="HomeController" id="slides_control">
 <div>
   <uib-carousel interval="setInterval">
-    <uib-slide ng-repeat="slide in slides track by slide.id" active="slide.active:0" index="slide.id">
-      <img class="carousel-images" ng-src="{{slide.image}}" alt="{{slide.id}}">
-        <div class="carousel-caption">
-          <h5>Assorted Band Events</h5>
+    <uib-slide ng-repeat="slide in slides track by slide.id" active="slide.active:0">
+      <img class="carousel-images" ng-src="{{slide.image}}" alt="{{slide.id}}" style=" width:300px height:200px">
+        <div class="carousel-caption" ng-model="slide.caption">
+          <h5>{{slide.caption}}</h5>
         </div>
     </uib-slide>
   </uib-carousel>
 </div>
 </div>      
-</div>
-
-    <!--controls--> 
-<div>
-  <a class="left carousel-control" href="image-carousel" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="image-carousel" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div> 
 
