--- a/templates/photo.html
+++ b/templates/photo.html
@@ -1,4 +1,4 @@
-<div ng-controller=" PhotoController">
+<div class="photos">
 	<div class="row">
 		<div class="col-lg-12">
 			<h3>Swing Crew Photo Gallery</h3>
