--- a/templates/Gallery.html
+++ b/templates/Gallery.html
@@ -1,4 +1,4 @@
-<div id="gallery" ng-controller="GalleryController">
+<div id="gallery">
   <h1>{{title}}</h1>  
     <ul ng-options="mediaList in media">
     <a href="
