--- a/templates/video.html
+++ b/templates/video.html
@@ -1,8 +1,6 @@
-  <div ng-controller=" VideoController">
+  <div class="video">
   <h3>Videos</h3>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-
+  
   <video width="300" controls>
   <source src="mov_bbb.mp4" type="video/mp4">
   <source src="mov_bbb.ogg" type="video/ogg">
