update image files index

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,7 @@
 
     <h3>Band Members</h3>
       <div class="container">  
-        <ul>
+        <ul  style="list-style-type:none">
           <li ng-repeat="member in members">
             <img ng-src="member.image" alt="member.name" class="img-thumnail img-responsive" id="about-image">
             <h5>{{member.name}}</h5>
