--- a/templates/home.html
+++ b/templates/home.html
@@ -1,15 +1,17 @@
-<div id="slides_control">
-<div>
-  <h1 ng-model="title">{{title}}</h1>
-  <uib-carousel interval="setInterval">
-    <uib-slide ng-repeat="slide in slides track by slide.id" active="slide.active:0">
-      <img class="carousel-images" ng-src="{{slide.image}}" alt="{{slide.id}}" style=" width:300px height:200px">
-        <div class="carousel-caption" ng-model="slide.caption">
-          <h5>{{slide.caption}}</h5>
-        </div>
-    </uib-slide>
-  </uib-carousel>
-</div>
+<div ng-controller="HomeController">
+	<div id="slides_control">
+	<div>
+  	<h1 ng-model="title">{{title}}</h1>
+  	<uib-carousel interval="setInterval">
+    	<uib-slide ng-repeat="slide in slides track by slide.id" active="slide.active:0">
+      		<img class="carousel-images" ng-src="{{slide.image}}" alt="{{slide.id}}" style=" width:300px height:200px">
+        	<div class="carousel-caption" ng-model="slide.caption">
+          	<h5>{{slide.caption}}</h5>
+        	</div>
+    	</uib-slide>
+  	</uib-carousel>
+	</div>
+	</div>
 </div>      
 
 
